--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name mote.ucuenca.edu.ec;
+    server_name localhost;
 
     location / {
         root /usr/share/nginx/html;
