--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "^18.0.5",
     "chart.js": "^4.4.0",
     "jwt-decode": "^3.1.2",
+    "ng-qrcode": "^18.0.0",
     "ngx-socket-io": "^4.7.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
