--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,10 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
+            "allowedCommonJsDependencies": [
+              "qrcode",
+              "quill-delta"
+            ],
 						"outputPath": {
 							"base": "dist/student-front"
 						},
@@ -44,8 +48,8 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
+									"maximumWarning": "1mb",
+									"maximumError": "5mb"
 								},
 								{
 									"type": "anyComponentStyle",
